test: Fix custom donation button overflowing on iOS

--- a/assets/scss/components/_donation-values.scss
+++ b/assets/scss/components/_donation-values.scss
@@ -43,8 +43,6 @@
 
   flex-wrap: nowrap;
 
-  gap: my.$gutter * 0.25;
-
   align-items: stretch;
 
   padding: 0;
